--- a/Trivia1.html
+++ b/Trivia1.html
@@ -59,7 +59,7 @@ background-image: url(https://elements-video-cover-images-0.imgix.net/files/2355
 background-repeat: no-repeat;
 background-size: cover;
 }
-</style>);
+</style>)
 <!-- add image/gif -->
 <div class="v">
     <img src="https://i.cartoonnetwork.com/prismo/props/reg_tv-pg-v.png" 
@@ -72,13 +72,12 @@ background-size: cover;
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
-<head>
-        
-<div>
+<body>
+  <html>
     <div style="text-align: center;">
 <h1>Answer the questions correctly</h1>
 
-  <a href="Trivia2.html"><button>Click to continue</button></a>
+  <a href="Trivia2.html"><button class="button1">Click to continue</button></a>
     </div>
             </body>
             </html> 
