--- a/Trivia4.html
+++ b/Trivia4.html
@@ -48,9 +48,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">What is the correct name of the yeti who fixes Mordecai and Rigby's problems?</h1>
+    <h1 id ='trivia'align="center">3# What is the correct name of the yeti who fixes Mordecai and Rigby's problems?</h1>
     <!-- add image/gif -->
     <div class="x">
     <img src="https://i.kym-cdn.com/photos/images/original/000/225/826/tumblr_lwmjvwxHqz1r4jva0o1_500.gif" 
@@ -65,10 +73,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="x">
-<a href="Triviawrong3.html"><button>Skippy</button></a>
-<a href="Triviawrong3.html"><button>Yeti boi</button></a>
-<a href="Triviawrong3.html"><button>Skipper</button></a>
-<a href="Trivia5.html"><button>Skips</button></a>
+<a href="Triviawrong3.html"><button class="button1">Skippy</button></a>
+<a href="Triviawrong3.html"><button class="button1">Yeti boi</button></a>
+<a href="Triviawrong3.html"><button class="button1">Skipper</button></a>
+<a href="Trivia5.html"><button class="button1">Skips</button></a>
   </div>
   </body>
 </html>
