--- a/Trivia5.html
+++ b/Trivia5.html
@@ -48,9 +48,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">How old is Mordecai and Rigby?</h1>
+    <h1 id ='trivia'align="center">4# How old is Mordecai and Rigby?</h1>
     <!-- add image/gif -->
     <div class="v">
     <img src="https://media.giphy.com/media/bpUqOin0GncFW/giphy.gif" 
@@ -65,10 +73,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="x">
-<a href="Triviawrong4.html"><button>30</button></a>
-<a href="Triviawrong4.html"><button>17</button></a>
-<a href="Trivia6.html"><button>23</button></a>
-<a href="Triviawrong4.html"><button>Ageless</button></a>
+<a href="Triviawrong4.html"><button class="button1">30</button></a>
+<a href="Triviawrong4.html"><button class="button1">17</button></a>
+<a href="Trivia6.html"><button class="button1">23</button></a>
+<a href="Triviawrong4.html"><button class="button1">Ageless</button></a>
 </div>
   </body>
 </html>
