--- a/Trivia8.html
+++ b/Trivia8.html
@@ -47,9 +47,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">Who does Muscle man always jokes about?</h1>
+    <h1 id ='trivia'align="center">7# Who does Muscle man always jokes about?</h1>
     <!-- add image/gif -->
     <div class="v">
     <img src="https://thumbs.gfycat.com/ImpoliteThisBear-size_restricted.gif" 
@@ -64,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong7.html"><button>"My uncle"</button></a>
-<a href="Triviawrong7.html"><button>"My cousin"</button></a>
-<a href="Trivia9.html"><button>"My mom"</button></a>
-<a href="Triviawrong7.html"><button>"My dad"</button></a>
+<a href="Triviawrong7.html"><button class="button1">"My uncle"</button></a>
+<a href="Triviawrong7.html"><button class="button1">"My cousin"</button></a>
+<a href="Trivia9.html"><button class="button1">"My mom"</button></a>
+<a href="Triviawrong7.html"><button class="button1">"My dad"</button></a>
 </div>
   </body>
 </html>
