--- a/TriviaEnd.html
+++ b/TriviaEnd.html
@@ -48,6 +48,14 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://tchol.org/images/gold-glitter-confetti-border-png-4.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">YOU MADE IT TO THE END!</h1>
