--- a/Triviawrong6.html
+++ b/Triviawrong6.html
@@ -48,6 +48,14 @@
     <title>[Website name]</title>
   </head>
   <body>
+      <!-- BACKGROUND -->
+      <style>
+          body {
+    background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/QIAQ9Rd/red-background-video-animation_vklukg8h__F0008.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+    </style>
       <script src= "svg.js"></script>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">WRONG ANSWER</h1>
@@ -65,7 +73,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Trivia7.html"><button>Go Back</button></a>
+<a href="Trivia7.html"><button class="button2">Go Back</button></a>
 </div>
   </body>
 </html>
