--- a/Trivia10.html
+++ b/Trivia10.html
@@ -48,9 +48,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">What is Pops?</h1>
+    <h1 id ='trivia'align="center">9# What is Pops?</h1>
     <!-- add image/gif -->
     <div class="x">
     <img src="https://giffiles.alphacoders.com/295/29524.gif" 
@@ -65,10 +73,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong9.html"><button>A human with a big head</button></a>
-<a href="Trivia11.html"><button>Lollipop man</button></a>
-<a href="Triviawrong9.html"><button>An alien</button></a>
-<a href="Triviawrong9.html"><button>A regular person</button></a>
+<a href="Triviawrong9.html"><button class="button1">A human with a big head</button></a>
+<a href="Trivia11.html"><button class="button1">Lollipop man</button></a>
+<a href="Triviawrong9.html"><button class="button1">An alien</button></a>
+<a href="Triviawrong9.html"><button class="button1">A regular person</button></a>
 </div>
   </body>
 </html>
