--- a/Trivia11.html
+++ b/Trivia11.html
@@ -47,9 +47,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">Who is Benson's boss?</h1>
+    <h1 id ='trivia'align="center">10# Who is Benson's boss?</h1>
     <!-- add image/gif -->
     <div class="v">
     <img src="https://zombiesruineverything.files.wordpress.com/2013/07/angry-benson.gif" 
@@ -64,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="TriviaEnd.html"><button>Mr. Maellard</button></a>
-<a href="Triviawrong10.html"><button>Skips</button></a>
-<a href="Triviawrong10.html"><button>Pops</button></a>
-<a href="Triviawrong10.html"><button>Mordecai & Rigby</button></a>
+<a href="TriviaEnd.html"><button class="button1">Mr. Maellard</button></a>
+<a href="Triviawrong10.html"><button class="button1">Skips</button></a>
+<a href="Triviawrong10.html"><button class="button1">Pops</button></a>
+<a href="Triviawrong10.html"><button class="button1">Mordecai & Rigby</button></a>
 </div>
   </body>
 </html>
