--- a/Trivia2.html
+++ b/Trivia2.html
@@ -48,9 +48,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+     <!-- BACKGROUND -->
+     <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">How long did Regular show last?</h1>
+    <h1 id ='trivia'align="center">1# How long did Regular show last?</h1>
 <p></p>
 <div class="x">
   <img src="https://media1.tenor.com/images/5f10a18f257ce2379ee188e9eb3c9ddd/tenor.gif?itemid=5407353" alt="">
@@ -68,10 +76,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong1.html"><button>4 years</button></a>
-<a href="Triviawrong1.html"><button>6 years</button></a>
-<a href="Trivia3.html"><button>8 years</button></a>
-<a href="Triviawrong1.html"><button>9 years</button></a>
+<a href="Triviawrong1.html"><button class="button1">4 years</button></a>
+<a href="Triviawrong1.html"><button class="button1">6 years</button></a>
+<a href="Trivia3.html"><button class="button1">8 years</button></a>
+<a href="Triviawrong1.html"><button class="button1">9 years</button></a>
 </div>
     
    
