--- a/Trivia3.html
+++ b/Trivia3.html
@@ -48,14 +48,23 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">Where did Mordecai and Rigby work?</h1>
+    <h1 id ='trivia'align="center">2# Where did Mordecai and Rigby work?</h1>
     <div class="x">
       <!-- add image/gif -->
-        <img src="http://2.bp.blogspot.com/-Bjshdy--mO8/ULaJmh_f9lI/AAAAAAAAGNk/EvqaVjHbefg/s1600/regular-show-one-pull-up-eileen-and-rigby-954x539.png" 
-        alt="">
-    </div>
+
+        <img src="http://2.bp.blogspot.com/-Bjshdy--mO8/ULaJmh_f9lI/AAAAAAAAGNk/EvqaVjHbefg/s1600/regular-show-one-pull-up-eileen-and-rigby-954x539.png" width="500" height="300" alt="Trivia">
+</div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -65,10 +74,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong2.html"><button>They're jobless</button></a>
-<a href="Trivia4.html"><button>The local park</button></a>
-<a href="Triviawrong2.html"><button>The coffee shop</button></a>
-<a href="Triviawrong2.html"><button>The burger joint</button></a>
+<a href="Triviawrong2.html"><button class="button1">They're jobless</button></a>
+<a href="Trivia4.html"><button class="button1">The local park</button></a>
+<a href="Triviawrong2.html"><button class="button1">The coffee shop</button></a>
+<a href="Triviawrong2.html"><button class="button1">The burger joint</button></a>
 </div>
   </body>
 </html>
