--- a/Trivia6.html
+++ b/Trivia6.html
@@ -47,9 +47,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">What are Mordecai and Rigby's catchphrases?</h1>
+    <h1 id ='trivia'align="center">5# What are Mordecai and Rigby's catchphrases?</h1>
     <!-- add image/gif -->
     <div class="v">
     <img src="http://thanksforyourplaying.files.wordpress.com/2013/08/oooh_zps67524ece.gif" 
@@ -64,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Trivia7.html"><button>"Ooooh!" and "Hm-Hm"</button></a>
-<a href="Triviawrong5.html"><button>"Yeah-yuh!" and "Wooo!"</button></a>
-<a href="Triviawrong5.html"><button>"Jolly good show"</button></a>
-<a href="Triviawrong5.html"><button>All of the above</button></a>
+<a href="Trivia7.html"><button class="button1">"Ooooh!" and "Hm-Hm"</button></a>
+<a href="Triviawrong5.html"><button class="button1">"Yeah-yuh!" and "Wooo!"</button></a>
+<a href="Triviawrong5.html"><button class="button1">"Jolly good show"</button></a>
+<a href="Triviawrong5.html"><button class="button1">All of the above</button></a>
 </div>
   </body>
 </html>
