--- a/Trivia7.html
+++ b/Trivia7.html
@@ -47,9 +47,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">Who is Muscle Man's best friend?</h1>
+    <h1 id ='trivia'align="center">6# Who is Muscle Man's best friend?</h1>
     <!-- add image/gif -->
     <div class="v">
     <img src="https://media4.giphy.com/media/13dyfTzVJ0ZcaI/giphy.gif" 
@@ -64,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong6.html"><button>Low Five Ghost</button></a>
-<a href="Triviawrong6.html"><button>Prank Ghost</button></a>
-<a href="Trivia8.html"><button>High Five Ghost</button></a>
-<a href="Triviawrong6.html"><button>The Ghost of the Park</button></a>
+<a href="Triviawrong6.html"><button class="button1">Low Five Ghost</button></a>
+<a href="Triviawrong6.html"><button class="button1">Prank Ghost</button></a>
+<a href="Trivia8.html"><button class="button1">High Five Ghost</button></a>
+<a href="Triviawrong6.html"><button class="button1">The Ghost of the Park</button></a>
 </div>
   </body>
 </html>
