--- a/Trivia9.html
+++ b/Trivia9.html
@@ -47,9 +47,17 @@
     <title>[Website name]</title>
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <style>
+        body {
+  background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
+  </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">How is Don related to Rigby?</h1>
+    <h1 id ='trivia'align="center">8# How is Don related to Rigby?</h1>
     <!-- add image/gif -->
     <div class="v">
     <img src="https://img.fireden.net/co/image/1517/54/1517549375689.gif" 
@@ -64,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong8.html"><button>Don is his older brother</button></a>
-<a href="Trivia10.html"><button>Don is his younger borther</button></a>
-<a href="Triviawrong8.html"><button>Don is his cousin</button></a>
-<a href="Triviawrong8.html"><button>Don is his dad</button></a>
+<a href="Triviawrong8.html"><button class="button1">Don is his older brother</button></a>
+<a href="Trivia10.html"><button class="button1">Don is his younger borther</button></a>
+<a href="Triviawrong8.html"><button class="button1">Don is his cousin</button></a>
+<a href="Triviawrong8.html"><button class="button1">Don is his dad</button></a>
 </div>
   </body>
 </html>
