--- a/second trivia10.html
+++ b/second trivia10.html
@@ -17,8 +17,8 @@
             Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
-            <a class="dropdown-item" href="second trivia1.html">Star wars</a>
+            <a class="dropdown-item" href="second trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
           </div>
@@ -34,6 +34,7 @@
     </div>
   </nav>
   
+
   <!doctype html>
 <html lang="en">
 <head>
@@ -49,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How do sith get there Red Blades?</h1>
+<h1 id ='trivia'align="center">What was the name of Anakin Skywalkers Padawan?</h1>
 <!-- add image/gif -->
-<div class="v">
-<img src="https://i.makeagif.com/media/5-16-2017/rtQbpf.gif" 
+<div class="x">
+<img src="https://www.outerplaces.com/media/k2/items/cache/dd843d07c2a1f73888925d2ff585f661_S.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -63,12 +64,11 @@ alt="">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
-<div class="x">
-<a href="second trivia1 wrong.html"><button>They dye it red</button></a>
-<a href="second trivia1 wrong.html"><button>its naturally red just a rare color</button></a>
-<a href="second trivia11.html"><button>pour in their hate and anger to make the krystal to bleed red</button></a>
-<a href="second trivia1 wrong.html"><button>they do a ritual</button></a>
+<div class="v">
+<a href="second trivia1 wrong.html"><button>Ashley</button></a>
+<a href="second trivia11.html"><button>Ahsoka</button></a>
+<a href="second trivia1 wrong.html"><button>Ashlen </button></a>
+<a href="second trivia1 wrong.html"><button>Ashoka</button></a>
 </div>
 </body>
 </html>
-<head>
