--- a/second trivia12.html
+++ b/second trivia12.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -49,10 +49,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">What planet did Maul die on?</h1>
+<h1 id ='trivia'align="center">Why did Darth Maul use a double bladed Lightsaber?</h1>
 <!-- add image/gif -->
 <div class="v">
-<img src="https://66.media.tumblr.com/c7cded0c7ec490e32796e972ca2cbf67/tumblr_on2ywx4jyo1smw5dno4_640.gif" /> 
+<img src="https://media.giphy.com/media/GFxXy4kf0wq64/giphy.gif" /> 
 <!-- alt="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjzuZDF2K3jAhXTMX0KHbhnDRkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.cbr.com%2Freasons-darth-maul-biggest-badass-sith%2F&psig=AOvVaw0AmoHlzRsoklykUWPq_y_r&ust=1562962690475989"> -->
 </div>
 <!-- Optional JavaScript -->
@@ -64,10 +64,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>Coruscant</button></a>
-<a href="second trivia13.html"><button>Tatooine</button></a>
-<a href="second trivia1 wrong.html"><button>Naboo</button></a>
-<a href="second trivia1 wrong.html"><button>Endor</button></a>
+<a href="second trivia1 wrong.html"><button>He thought it would be intimidating and scare the opponent to make mistakes during battle</button></a>
+<a href="second trivia13.html"><button>it gave him more choices during combat</button></a>
+<a href="second trivia1 wrong.html"><button>he thought it looked cool</button></a>
+<a href="second trivia1 wrong.html"><button>he was given it as a trophie/prize</button></a>
 </div>
 </body>
 </html>
