--- a/second trivia21.html
+++ b/second trivia21.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">why did vader die from the emperors force lightning?</h1>
+<h1 id ='trivia'align="center">?</h1>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://marciokenobi.files.wordpress.com/2015/11/untitled-381.gif" 
+<img src="https://vignette.wikia.nocookie.net/starwars/images/5/58/ISD-I.png/revision/latest?cb=20150416041211" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -65,11 +65,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>he was already weakened by luke when he damaged his suit</button></a>
-<a href="Second trivia15.html"><button>his suit had a weakness to force lightning designed by palpatine himself</button></a>
-<a href="second trivia1 wrong.html"><button>the force lightning cause his life support to stop working</button></a>
-<a href="second trivia1 wrong.html"><button>none of the above</button></a>
+<a href="second trivia1 wrong.html"><button>120,456 imperials</button></a>
+<a href="second trivia22.html">130,570</button></a>
+<a href="second trivia1 wrong.html"><button>131,600</button></a>
+<a href="second trivia1 wrong.html"><button>All of the above</button></a>
 </div>
 </body>
 </html>
-<head>
