--- a/second trivia22.html
+++ b/second trivia22.html
@@ -17,8 +17,8 @@
             Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="second trivia1.html">Regular show</a>
-            <a class="dropdown-item" href="">Star wars</a>
+            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="second trivia1.html">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
           </div>
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">why did vader die from the emperors force lightning?</h1>
+<h1 id ='trivia'align="center">YOU MADE IT TO THE END!</h1>
 <!-- add image/gif -->
-<div class="x">
-<img src="https://marciokenobi.files.wordpress.com/2015/11/untitled-381.gif" 
+<div class="v">
+<img src="https://i.ytimg.com/vi/iH6a1iYQ0GA/maxresdefault.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -64,12 +64,7 @@ alt="">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
-<div class="v">
-<a href="second trivia1 wrong.html"><button>he was already weakened by luke when he damaged his suit</button></a>
-<a href="Second trivia15.html"><button>his suit had a weakness to force lightning designed by palpatine himself</button></a>
-<a href="second trivia1 wrong.html"><button>the force lightning cause his life support to stop working</button></a>
-<a href="second trivia1 wrong.html"><button>none of the above</button></a>
-</div>
+
 </body>
 </html>
 <head>
