--- a/second trivia8.html
+++ b/second trivia8.html
@@ -49,7 +49,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">What was the perpose of the clone army?</h1>
+<h1 id ='trivia'align="center">What was the purpose of the clone army?</h1>
 <!-- add image/gif -->
 <div class="v">
 <img src="https://media.giphy.com/media/nHMZtWCO1jKLK/giphy-downsized-large.gif" 
