--- a/second trivia15.html
+++ b/second trivia15.html
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">When did the battle of Yaven take place?</h1>
+<h1 id ='trivia'align="center">how did Han Solo get the Falcon?</h1>
 <!-- add image/gif -->
 <div class="x">
-<img src="http://pa1.narvii.com/6394/feb5d71e256b2852e25a34eeeedb9fc31b962d86_00.gif"
+<img src="https://ewscripps.brightspotcdn.com/dims4/default/a782f54/2147483647/strip/true/crop/640x360+0+60/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.wcpo.com%2Fphoto%2F2018%2F04%2F23%2FWCPO_falcon_1524528489522_84735425_ver1.0_640_480.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -65,10 +65,11 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia16.html"><button>0 BBY</button></a>
-<a href="second trivia1 wrong.html"><button>1 BBY</button></a>
-<a href="second trivia1 wrong.html"><button>2 BBY</button></a>
-<a href="second trivia1 wrong.html"><button>3 BBY</button></a>
+<a href="second trivia1 wrong.html"><button>Stole it</button></a>
+<a href="second trivia16.html"><button>Won it</button></a>
+<a href="second trivia1 wrong.html"><button>Bought it</button></a>
+<a href="second trivia1 wrong.html"><button>Borrowed it and never gave it back</button></a>
 </div>
 </body>
 </html>
+<head>
