take it as you will

--- a/squares.html
+++ b/squares.html
@@ -60,8 +60,8 @@
 
         <div class ='grid'>
         <!--These are the Boxes-->
-        <div class="_h_tml square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()">1</div>
-
+        <div class="_h_tml square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()"></div>
+        
         <div class="h_t_ml square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()"></div>
         <!--This is Start of the words "Main.jss" and part of "HTML"-->
         <div class="ht_m_l square" onmouseover="changeText('HTML Hint and main.jss Hint')" onmouseout="defaultText()"></div>
@@ -127,7 +127,18 @@
         <div class="cod_i_ng square" onmouseover="changeText('Coding Hint')" onmouseout="defaultText()"></div>
         <div class="codi_n_g square" onmouseover="changeText('Coding Hint')" onmouseout="defaultText()"></div>
         <div class="codin_g_ square" onmouseover="changeText('Coding Hint')" onmouseout="defaultText()"></div>
-        <!--The Defult Hint-->
+       
+       <!--Numbers-->
+       <div class= "_h_tml-number" onmouseover="changeText('Default Hint')" onmouseout="defaultText()">1</div>
+       <div class= "_c_ss-number" onmouseover="changeText('Default Hint')" onmouseout="defaultText()">2</div>
+       <div class= "ht_m_l-number" onmouseover="changeText('Default Hint')" onmouseout="defaultText()">3</div>
+       <div class= "mai_n_-jss-number" onmouseover="changeText('Default Hint')" onmouseout="defaultText()">4</div>
+       <div class= "main-_j_ss-number" onmouseover="changeText('Default Hint')" onmouseout="defaultText()">5</div>
+       <div class= "cs_s_-number" onmouseover="changeText('Default Hint')" onmouseout="defaultText()">6</div>
+       <div class= "javascr_i_pt-number" onmouseover="changeText('Default Hint')" onmouseout="defaultText()">7</div>
+       <div class= "javascri_p_t-number" onmouseover="changeText('Default Hint')" onmouseout="defaultText()">8</div>
+
+       <!--The Defult Hint-->
         <div id="text-display">
   
             :Your Hint Here:
