--- a/second trivia21.html
+++ b/second trivia21.html
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">?</h1>
+<h1 id ='trivia'align="center">How many imperials can a Star Destroyer hold?</h1>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://vignette.wikia.nocookie.net/starwars/images/5/58/ISD-I.png/revision/latest?cb=20150416041211" 
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQB9L6Bis4cNiEntUCVu4TlW-uJU2Qq-1jwfJcSugYkhJZEXNhJUg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -65,10 +65,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>120,456 imperials</button></a>
-<a href="second trivia22.html">130,570</button></a>
-<a href="second trivia1 wrong.html"><button>131,600</button></a>
-<a href="second trivia1 wrong.html"><button>All of the above</button></a>
+<a href="second trivia1 wrong.html"><button>133,640</button></a>
+<a href="second trivia22.html"><button>130,570</button></a>
+<a href="second trivia1 wrong.html"><button>128,650</button></a>
+<a href="second trivia1 wrong.html"><button>135,700</button></a>
 </div>
 </body>
 </html>
