--- a/second trivia23.html
+++ b/second trivia23.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -17,8 +17,8 @@
             Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
-            <a class="dropdown-item" href="second trivia1.html">Star wars</a>
+            <a class="dropdown-item" href="second trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
           </div>
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">YOU MADE IT TO THE END!</h1>
+<h1 id ='trivia'align="center">How old was Anakin when he died?</h1>
 <!-- add image/gif -->
-<div class="v">
-<img src="https://i.ytimg.com/vi/iH6a1iYQ0GA/maxresdefault.jpg" 
+<div class="x">
+<img src="https://cbsnews1.cbsistatic.com/hub/i/r/2015/12/15/a40efc03-73a6-458f-a5ff-697d1cca1aef/resize/620x465/7990fcf9a625c425516d571e5c720069/darth-vader-unmasked.png" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -64,7 +64,11 @@ alt="">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
-
+<div class="v">
+<a href="second trivia1 wrong.html"><button>40</button></a>
+<a href="second trivia1 wrong.html"><button>42</button></a>
+<a href="second trivia1 wrong.html"><button>43</button></a>
+<a href="second trivia22.html"><button>44</button></a>
+</div>
 </body>
 </html>
-<head>
