--- a/second trivia22.html
+++ b/second trivia22.html
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How old was Anakin when he Turned to the dark side?</h1>
+<h1 id ='trivia'align="center">What does AT AT stand for?</h1>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://i.ytimg.com/vi/fDeSAh5nv5c/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=67&sigh=7I90pUS0lAUNqxoUpICdaYsW1eU" 
+<img src="https://cdn-static.denofgeek.com/sites/denofgeek/files/styles/main_wide/public/2016/05/atat-walkers.jpg?itok=MpPWqA5A" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -65,10 +65,9 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>21</button></a>
-<a href="second trivia22.html"><button>22</button></a>
-<a href="second trivia1 wrong.html"><button>23</button></a>
-<a href="second trivia1 wrong.html"><button>24</button></a>
+<a href="second trivia1 wrong.html"><button>All Terrain Attack Transport </button></a>
+<a href="second trivia1 wrong.html"><button>Armored Terrain Attack Transpor</button></a>
+<a href="second trivia23.html"><button>All Terrain Armored Transport</button></a>
 </div>
 </body>
 </html>
