--- a/squares.html
+++ b/squares.html
@@ -36,7 +36,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="Trivia1.html">Regular show</a>
-                  <a class="dropdown-item" href="second trivia1.html">Star wars</a>
+                  <a class="dropdown-item" href="">Star wars</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="Description.html">Descripton</a>
                 </div>
@@ -93,9 +93,9 @@
         <div class="sty_l_e square" onmouseover="changeText('Style Hint')" onmouseout="defaultText()"></div>
         <div class="styl_e_ square" onmouseover="changeText('Style Hint')" onmouseout="defaultText()"></div>
         <!--Word= 'Javascript'-->
-        <div class="j_a_vascript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
-        <div class="ja_v_ascript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
-        <div class="jav_a_script square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
+        <div class="j_a_vascript square" onmouseover="changeText('const')" onmouseout="defaultText()"></div>
+        <div class="ja_v_ascript square" onmouseover="changeText('document')" onmouseout="defaultText()"></div>
+        <div class="jav_a_script square" onmouseover="changeText('')" onmouseout="defaultText()"></div>
         <div class="java_s_cript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
         <div class="javas_c_ript square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
         <div class="javasc_r_ipt square" onmouseover="changeText('Javascript Hint')" onmouseout="defaultText()"></div>
