--- a/triviafunko1.html
+++ b/triviafunko1.html
@@ -49,10 +49,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">What movie is this character in?</h1>
+<h1 id ='trivia'align="center">When was funko pops created?</h1>
 <!-- add image/gif -->
-<div class="v">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSruKaSiNXCbvk45FlAieJ3glvouOD6CAeg36xNtHOaRBRA29JM" 
+<div class="x">
+<img src="https://images-na.ssl-images-amazon.com/images/I/51jAfUVaYLL._SX466_.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -64,10 +64,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="x">
-<a href="triviafunko2wrong.html"><button>Spongebob</button></a>
-<a href="triviafunko2wrong.html"><button>spacejam</button></a>
-<a href="3triviafunko.html"><button>Docter Strange</button></a>
-<a href="triviafunko2wrong.html"><button>The Flash</button></a>
+<a href="triviafunkowrong1.html"><button>1983</button></a>
+<a href="triviafunkowrong1.html"><button>1975</button></a>
+<a href="triviafunkowrong1.html"><button>1962</button></a>
+<a href="2triviafunko.html"><button>1998</button></a>
 </div>
 </body>
 </html>
