--- a/3triviafunko.html
+++ b/3triviafunko.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Home</a>
+<a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,18 +6,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="Trivia1.html">Trivia <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="CrossWord.html">Crossword <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">[Blank]</a>
+          <a class="nav-link" href="WordSearch.html">WordSearch</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Puzzles
+            Trivia
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="CrossWord.html">Crossword</a>
-            <a class="dropdown-item" href="WordSearch.html">WordSearch</a>
+            <a class="dropdown-item" href="Trivia1.html">Regular show</a>
+            <a class="dropdown-item" href="second trivia1.html">Star wars</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="Description.html">Descripton</a>
           </div>
@@ -33,6 +32,7 @@
       </form>
     </div>
   </nav>
+  
 
   <!doctype html>
 <html lang="en">
@@ -49,11 +49,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">What movie is this character in?</h1>
-<!-- add image/gif -->
-<div class="v">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSruKaSiNXCbvk45FlAieJ3glvouOD6CAeg36xNtHOaRBRA29JM" 
-alt="">
+<h1 id ='trivia'align="center">When was the first bat man pop created?</h1>
+<div class="x">
+  <!-- add image/gif -->
+    <img src="https://s1.thcdn.com/productimg/960/960/11351734-3404428611818545.jpg" 
+    alt="">
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -63,11 +63,12 @@ alt="">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
-<div class="x">
-<a href="triviafunko2wrong.html"><button>Spongebob</button></a>
-<a href="triviafunko2wrong.html"><button>spacejam</button></a>
-<a href="3triviafunko.html"><button>Docter Strange</button></a>
-<a href="triviafunko2wrong.html"><button>The Flash</button></a>
+<div class="v">
+<a href="triviafunko3wrong.html"><button>1830</button></a>
+<a href="4triviafunko.html"><button>1939</button></a>
+<a href="triviafunko3wrong.html"><button>1920</button></a>
+<a href="triviafunko3wrong.html"><button>1940</button></a>
+<a href="triviafunko3wrong.html"><button>1876</button></a>
 </div>
 </body>
 </html>
