--- a/second trivia24.html
+++ b/second trivia24.html
@@ -50,10 +50,10 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How old was Anakin when he Turned to the dark side?</h1>
+<h1 id ='trivia'align="center">In Cannon after the the battle of Endor who came leader of the Empire??</h1>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://i.ytimg.com/vi/fDeSAh5nv5c/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=67&sigh=7I90pUS0lAUNqxoUpICdaYsW1eU" 
+<img src="https://i.pinimg.com/736x/48/5f/a0/485fa015af3114920d906c951bd2ccd2.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -65,10 +65,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>21</button></a>
-<a href="second trivia25.html"><button>22</button></a>
-<a href="second trivia1 wrong.html"><button>23</button></a>
-<a href="second trivia1 wrong.html"><button>24</button></a>
+<a href="second trivia23 wrong.html"><button>Grand Admiral Thrawn</button></a>
+<a href="second trivia23 wrong.html"><button>Colonel Yularen</button></a>
+<a href="second trivia25.html"><button>Gallius Rax</button></a>
+<a href="second trivia23 wrong.html"></button>Gar Saxon</button></a>
 </div>
 </body>
 </html>
