--- a/second trivia24.html
+++ b/second trivia24.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">In Cannon after the the battle of Endor who came leader of the Empire??</h1>
+<h1 id ='trivia'align="center">In Cannon after the fall of the Galactic Empire??</h1>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://i.pinimg.com/736x/48/5f/a0/485fa015af3114920d906c951bd2ccd2.jpg" 
