--- a/second trivia23.html
+++ b/second trivia23.html
@@ -65,8 +65,8 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia22 wrong.html"><button>All Terrain Attack Transport </button></a>
-<a href="second trivia22 wrong.html"><button>Armored Terrain Attack Transpor</button></a>
+<a href="second trivia1 wrong.html"><button>All Terrain Attack Transport </button></a>
+<a href="second trivia1 wrong.html"><button>Armored Terrain Attack Transport</button></a>
 <a href="second trivia24.html"><button>All Terrain Armored Transport</button></a>
 </div>
 </body>
