--- a/second trivia12.html
+++ b/second trivia12.html
@@ -65,7 +65,7 @@
 </script>
 <div class="v">
 <a href="second trivia1 wrong.html"><button>He thought it would be intimidating and scare the opponent to make mistakes during battle</button></a>
-<a href="second trivia1.html"><button>the thought it looked cool</button></a>
+<a href="second trivia1 wrong.html"><button>the thought it looked cool</button></a>
 <a href="second trivia13.html"><button>it gave him more choices during combat</button></a>
 <a href="second trivia1 wrong.html"><button>he was given it as a trophie/prize</button></a>
 </div>
