--- a/second trivia24.html
+++ b/second trivia24.html
@@ -68,7 +68,7 @@ alt="">
 <a href="second trivia1 wrong.html"><button>Grand Admiral Thrawn</button></a>
 <a href="second trivia1 wrong.html"><button>Colonel Yularen</button></a>
 <a href="second trivia25.html"><button>Gallius Rax</button></a>
-<a href="second trivia1 wrong.html"></button>Gar Saxon</button></a>
+<a href="second trivia1 wrong.html"><button>Gar Saxon</button></a>
 </div>
 </body>
 </html>
