--- a/squares.html
+++ b/squares.html
@@ -144,7 +144,7 @@
             :Your Hint Here:
                
          </div>
-         <input><input>
+         <input class="answerU">
         </div>
 
     <!-- Optional JavaScript -->
