--- a/second trivia17.html
+++ b/second trivia17.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">When did the battle of Yaven take place?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="http://pa1.narvii.com/6394/feb5d71e256b2852e25a34eeeedb9fc31b962d86_00.gif"
