--- a/second trivia2.html
+++ b/second trivia2.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">when was Luke Skywalker Born?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <p></p>
 <div class="x">
 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9b/Luke_Skywalker.png/220px-Luke_Skywalker.png">
