--- a/second trivia21.html
+++ b/second trivia21.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">How much does a Lightsaber usaully cost in the black market?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://cdn.shopify.com/s/files/1/1440/9434/products/redeemer-v2_8a3db6a7-8fe1-4f09-90e3-a9f4c8057f14_300x300.jpg?v=1558480091" 
