--- a/second trivia1.html
+++ b/second trivia1.html
@@ -51,7 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">Star Wars Trivia</h1>
-
+<!-- BACKGROUND -->
+<style>
+    body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="v">
 <img src="https://ixxidesign.azureedge.net/media/1068043/26-Star-Wars-logo-black-5x6.jpg?width=562" 
