--- a/second trivia10.html
+++ b/second trivia10.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">What was the name of Anakin Skywalkers Padawan?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://www.outerplaces.com/media/k2/items/cache/dd843d07c2a1f73888925d2ff585f661_S.jpg" 
