--- a/second trivia12.html
+++ b/second trivia12.html
@@ -50,6 +50,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">Why did Darth Maul use a double bladed Lightsaber?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="v">
 <img src="https://media.giphy.com/media/GFxXy4kf0wq64/giphy.gif" /> 
