--- a/second trivia13.html
+++ b/second trivia13.html
@@ -50,6 +50,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">What planet did Maul die on?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="v">
 <img src="https://66.media.tumblr.com/c7cded0c7ec490e32796e972ca2cbf67/tumblr_on2ywx4jyo1smw5dno4_640.gif" /> 
