--- a/second trivia15.html
+++ b/second trivia15.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">how did Han Solo get the Falcon?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://ewscripps.brightspotcdn.com/dims4/default/a782f54/2147483647/strip/true/crop/640x360+0+60/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.wcpo.com%2Fphoto%2F2018%2F04%2F23%2FWCPO_falcon_1524528489522_84735425_ver1.0_640_480.jpg" 
