--- a/second trivia22.html
+++ b/second trivia22.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">How many imperials can a Star Destroyer hold?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQB9L6Bis4cNiEntUCVu4TlW-uJU2Qq-1jwfJcSugYkhJZEXNhJUg" 
