--- a/second trivia23.html
+++ b/second trivia23.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">What does AT AT stand for?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://cdn-static.denofgeek.com/sites/denofgeek/files/styles/main_wide/public/2016/05/atat-walkers.jpg?itok=MpPWqA5A" 
