--- a/second trivia24.html
+++ b/second trivia24.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">In Cannon after the fall of the Galactic Empire??</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://i.pinimg.com/736x/48/5f/a0/485fa015af3114920d906c951bd2ccd2.jpg" 
