--- a/second trivia26.html
+++ b/second trivia26.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">How old was Anakin when he died?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://cbsnews1.cbsistatic.com/hub/i/r/2015/12/15/a40efc03-73a6-458f-a5ff-697d1cca1aef/resize/620x465/7990fcf9a625c425516d571e5c720069/darth-vader-unmasked.png" 
