--- a/second trivia4.html
+++ b/second trivia4.html
@@ -51,6 +51,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">How many people could the death star house?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="x">
 <img src="https://fsmedia.imgix.net/7e/8f/38/b3/5e13/4a4d/9f19/4e3c2e1b1aca/death-star-in-rogue-one.gif#image" 
