--- a/second trivia6.html
+++ b/second trivia6.html
@@ -51,9 +51,17 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">How many forms of lightsaber fighting styles where there?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>
 <!-- add image/gif -->
 <div class="v">
-<img src="https://thumbs.gfycat.com/OddballFlakyFieldmouse-size_restricted.gif" 
+  <img src="https://thumbs.gfycat.com/OddballFlakyFieldmouse-size_restricted.gif" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
