--- a/Trivia1.html
+++ b/Trivia1.html
@@ -74,11 +74,13 @@ background-size: cover;
 </html>
 <body>
   <html>
+
     <div style="text-align: center;">
 <h1>Answer the questions correctly</h1>
 
   <a href="Trivia2.html"><button class="button1">Click to continue</button></a>
     </div>
+    </html>
            
            
 
