--- a/memory1.html
+++ b/memory1.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    Memorize the list and be prepared to type what you remember in the next page.
-    [list]
+    <div style="text-align: center">
+    <h1>Memorizing a list</h1>
+    <h3>For this excerise you will try to memorise a list of words.</h3>
+    <h3>Heres a warm-up. Memorise the words then proceed to the next page.</h3>
+<h3>yawn</h3> <h3>dog</h3> <h3>jog</h3> <h3>chop</h3> <h3>pop</h3>
+</div>
 </body>
 </html>
