--- a/2triviafunko.html
+++ b/2triviafunko.html
@@ -50,6 +50,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">What movie is this character in?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLd6CPwK1wRozS-sez1xlcVZ2toAV4CpLtadFwA0ciX4Rc8fkr6A);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>)
 <!-- add image/gif -->
 <div class="v">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSruKaSiNXCbvk45FlAieJ3glvouOD6CAeg36xNtHOaRBRA29JM" 
