--- a/3triviafunko.html
+++ b/3triviafunko.html
@@ -50,6 +50,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">When was the first bat man pop created?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZCWA0ws-nJ0551CildQ8i0tAsaSIcOCpV4b7IpEqs6IbeiJwJ);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>)
 <div class="x">
   <!-- add image/gif -->
     <img src="https://s1.thcdn.com/productimg/960/960/11351734-3404428611818545.jpg" 
