--- a/funkotriviaend.html
+++ b/funkotriviaend.html
@@ -53,6 +53,11 @@
 <h1 id ='trivia'align="center">YOU MADE IT TO THE END!</h1>
 <!-- add image/gif -->
 <div class="v">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQvEFUYyE-mcUSP--1fhA62QvAi991CLhJpxyQ5r_vod_AU8u1" 
+  alt="">
+</div>
+<!-- add image/gif -->
+<div class="v">
 <img src="http://clipartmag.com/images/congratulation-images-animated-18.gif" 
 alt="">
 </div>
