--- a/triviafunko1.html
+++ b/triviafunko1.html
@@ -50,6 +50,14 @@
   <script src= "svg.js"></script>
 <script src='main.js'></script>
 <h1 id ='trivia'align="center">When was funko pops created?</h1>
+<!-- BACKGROUND -->
+<style>
+  body {
+background-image: url(https://media.gettyimages.com/illustrations/blue-green-watercolor-background-illustration-id821141828?s=612x612);
+background-repeat: no-repeat;
+background-size: cover;
+}
+</style>)
 <!-- add image/gif -->
 <div class="x">
 <img src="https://images-na.ssl-images-amazon.com/images/I/51jAfUVaYLL._SX466_.jpg" 
