--- a/second trivia2.html
+++ b/second trivia2.html
@@ -54,7 +54,7 @@
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://media.comicbook.com/2015/10/tatooine-sunset-luke-156892-1280x0.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
