--- a/second trivia3.html
+++ b/second trivia3.html
@@ -54,7 +54,7 @@
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://vignette.wikia.nocookie.net/starwars/images/f/f0/InYouMustGo-TCGCS.png/revision/latest?cb=20141218063223);
 background-repeat: no-repeat;
 background-size: cover;
 }
