--- a/second trivia4.html
+++ b/second trivia4.html
@@ -54,7 +54,7 @@
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS65Wa1dE0t7gcN7luv6CVyhFoiW-nwd4SDhwBb81IltNTsT4dJ);
 background-repeat: no-repeat;
 background-size: cover;
 }
