--- a/second trivia7.html
+++ b/second trivia7.html
@@ -53,7 +53,7 @@
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://drnorth.files.wordpress.com/2009/06/vlcsnap-45052.png?w=584);
 background-repeat: no-repeat;
 background-size: cover;
 }
