--- a/second trivia9.html
+++ b/second trivia9.html
@@ -54,7 +54,7 @@
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://wallpaperplay.com/walls/full/d/6/9/181380.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
