--- a/second trivia24.html
+++ b/second trivia24.html
@@ -50,11 +50,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">In Cannon after the fall of the Galactic Empire??</h1>
+<h1 id ='tittle'align="center">In Cannon after the fall of the Galactic Empire who became the leader?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://i.ytimg.com/vi/ObnSMf6iBi8/maxresdefault.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
