--- a/memory.html
+++ b/memory.html
@@ -49,7 +49,7 @@
   <body>
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <div class="v">
+    <div style="text-align: center;">
     <h1 id ='memory'>Memory is key</h1>
     </div>
     <!-- BACKGROUND -->
@@ -61,7 +61,7 @@ background-size: cover;
 }
 </style>)
 <!-- add image/gif -->
-<div class="v">
+<div style="text-align: center;">>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCp-PuCnhjtoiAueYMVI9Pw0yz-819jQTavGj8hhlkZrzwkMYG" 
     alt="">
 </div>
