--- a/memory2.html
+++ b/memory2.html
@@ -1,3 +1,4 @@
 <!-- Have an input box for player to input answer. 
 Listed correctly, then "winner". if not then, "try again" -->
 <input type =>
+function
