--- a/memory3.html
+++ b/memory3.html
@@ -1,1 +1,27 @@
-<!-- The same as the last but with pictures instead -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <div style= "text-align: center ">
+         <h1> Second list</h1>
+        <h3>As you progress, the list will get longer.</h3>
+        <h3>Here is a list of 10 words</h3>
+        <h3>apple</h3>
+        <h3>snail</h3>
+        <h3>ocean</h3>
+        <h3>concret</h3>
+        <h3>dollar</h3>
+        <h3>jock</h3>
+        <h3>dog</h3>
+        <h3>smog</h3>
+        <h3>strap</h3>
+        <h3>smack</h3>
+    </div>
+    
+</body>
+</html>
