--- a/second trivia19.html
+++ b/second trivia19.html
@@ -50,11 +50,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many Planets did Star Killer base blow up?</h1>
+<h1 id ='Epic'align="center">How many Planets did Star Killer base blow up?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://vignette.wikia.nocookie.net/battlefront/images/b/be/Skb-tile-lg.jpg/revision/latest?cb=20171007223919);
 background-repeat: no-repeat;
 background-size: cover;
 }
