--- a/memory.html
+++ b/memory.html
@@ -61,7 +61,7 @@ background-size: cover;
 }
 </style>)
 <!-- add image/gif -->
-<div style="text-align: center;">>
+<div style="text-align: center;">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCp-PuCnhjtoiAueYMVI9Pw0yz-819jQTavGj8hhlkZrzwkMYG" 
     alt="">
 </div>
