--- a/memory1.html
+++ b/memory1.html
@@ -11,7 +11,12 @@
     <h1>Memorizing a list</h1>
     <h3>For this excerise you will try to memorise a list of words.</h3>
     <h3>Heres a warm-up. Memorise the words then proceed to the next page.</h3>
-<h3>yawn</h3> <h3>dog</h3> <h3>jog</h3> <h3>chop</h3> <h3>pop</h3>
+<h3>yawn</h3> 
+<h3>dog</h3> 
+<h3>jog</h3> 
+<h3>chop</h3> 
+<h3>pop</h3>
+<a href="memory2.html"><button class="button1">Click to continue</button></a>
 </div>
 </body>
 </html>
