--- a/memory2.html
+++ b/memory2.html
@@ -2,3 +2,7 @@
 Listed correctly, then "winner". if not then, "try again" -->
 <input type =>
 function
+<button id='y'>user's input</button>
+<div>
+    <a href="memory3.html"><button class="button1">Click to continue</button></a>
+</div>
