--- a/memory3.html
+++ b/memory3.html
@@ -21,6 +21,7 @@
         <h3>smog</h3>
         <h3>strap</h3>
         <h3>smack</h3>
+        <a href="memory4.html"><button class="button1">Click to continue</button></a>
     </div>
     
 </body>
