--- a/second trivia22.html
+++ b/second trivia22.html
@@ -50,11 +50,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many imperials can a Star Destroyer hold?</h1>
+<h1 id ='gamer'align="center">How many imperials can a Star Destroyer hold?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://vignette.wikia.nocookie.net/starwars/images/8/88/ISDIIESB.png/revision/latest?cb=20130320005623);
 background-repeat: no-repeat;
 background-size: cover;
 }
