--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ background-size: cover;
 <a href="WordSearch.html"><img src="https://cdn.games-images.coolgames.com/word-search-gameplay-20/en/ICON_HP/196_151/b67862e0fcf503bbc84d7d4a3ff46683/word-search-gameplay-20.jpg" width="202" height="206" title="WordSearch" alt="wordsearch"></a>
 <a href="Trivia1.html"><img src="http://images6.fanpop.com/image/photos/40800000/2022c4af-regular-show-4-unknown_kings-40831918-720-540.jpg" width="202" height="206" title="Regular show Trivia" alt="Trivia"></a>
 <a href="second trivia1.html"><img src="https://media.graytvinc.com/images/810*455/Star+Wars49.jpg" width="202" height="206" title="Star wars Trivia" alt="Trivia"></a>
-<a href="2triviafunko.html"><img src="https://i.kym-cdn.com/entries/icons/original/000/024/030/thumb.png" width="202" height="206" title="Funko pop" alt="Trivia"></a>
+<a href="triviafunko.html"><img src="https://i.kym-cdn.com/entries/icons/original/000/024/030/thumb.png" width="202" height="206" title="Funko pop" alt="Trivia"></a>
 <a href=""><img src="=" width="202" height="206" title="?" alt="Trivia"></a>
 </div>
     <!-- Optional JavaScript -->
