--- a/third trivia5.html
+++ b/third trivia5.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">What is the best selling nintendo game to this date?</h1>
+<h1 id ='trivia'align="center">What is the best selling nintendo console?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -61,7 +61,7 @@ background-size: cover;
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://d2skuhm0vrry40.cloudfront.net/2017/articles//a/1/8/8/6/2/0/1/Nintendo_Super_Famicom_Set_FL.jpg.jpg/EG11/resize/690x-1/quality/75/format/jpg" 
+<img src="https://i.ytimg.com/vi/847wBf-9Z9w/maxresdefault.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -73,10 +73,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="third trivia5.html"><button>Wii Sports</button></a>
-<a href="third trivia1 wrong.html"><button>Super Smash Bros</button></a>
-<a href="third trivia1 wrong.html"><button>Pokemon Red/Blue/Green/Yellow</button></a>
-<a href="third trivia1 wrong.html"><button>Wii Fit</button></a>
+<a href="third trivia6.html"><button>Nintendo DS</button></a>
+<a href="third trivia1 wrong.html"><button>Game Boy</button></a>
+<a href="third trivia1 wrong.html"><button>Nintendo Wii</button></a>
+<a href="third trivia1 wrong.html"><button>Game Boy Advance</button></a>
 </div>
 </body>
 </html>
