--- a/third trivia11.html
+++ b/third trivia11.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many National HQ's does Nintendo have?</h1>
+<h1 id ='trivia'align="center">Which one of these Items did Nintendo once sell?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -73,10 +73,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="third trivia1 wrong.html"><button>3</button></a>
-<a href="third trivia10.html"><button>4</button></a>
-<a href="third trivia1 wrong.html"><button>5</button></a>
-<a href="third trivia1 wrong.html"><button>6</button></a>
+<a href="third trivia1 wrong.html"><button>Sports Equipment</button></a>
+<a href="third trivia12.html"><button>Instant Rice</button></a>
+<a href="third trivia1 wrong.html"><button>TV's</button></a>
+<a href="third trivia1 wrong.html"><button>kitchen Utensils</button></a>
 </div>
 </body>
 </html>
