--- a/third trivia10.html
+++ b/third trivia10.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many National HQ's does Nintendo have?</h1>
+<h1 id ='trivia'align="center">What was the name of the sequel to Super Mario World?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -61,7 +61,7 @@ background-size: cover;
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://d2skuhm0vrry40.cloudfront.net/2017/articles//a/1/8/8/6/2/0/1/Nintendo_Super_Famicom_Set_FL.jpg.jpg/EG11/resize/690x-1/quality/75/format/jpg" 
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1xbBGx7-qCcGK9GzU8Oqv1QFqv0ZnQLeX4iufuoBnvcPRWkHf" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -73,10 +73,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="third trivia1 wrong.html"><button>3</button></a>
-<a href="third trivia11.html"><button>4</button></a>
-<a href="third trivia1 wrong.html"><button>5</button></a>
-<a href="third trivia1 wrong.html"><button>6</button></a>
+<a href="third trivia1 wrong.html"><button>Yoshi's Island</button></a>
+<a href="third trivia11.html"><button>Super Mario land</button></a>
+<a href="third trivia1 wrong.html"><button>Mario is missing</button></a>
+<a href="third trivia1 wrong.html"><button>Mario's island</button></a>
 </div>
 </body>
 </html>
