--- a/third trivia9.html
+++ b/third trivia9.html
@@ -61,7 +61,7 @@ background-size: cover;
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://d2skuhm0vrry40.cloudfront.net/2017/articles//a/1/8/8/6/2/0/1/Nintendo_Super_Famicom_Set_FL.jpg.jpg/EG11/resize/690x-1/quality/75/format/jpg" 
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0OKpVXWRWxRpWuZ4UVvFndG-tZM1c7fapu1KkCr7gtrSebQ2g" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
