--- a/third trivia1.html
+++ b/third trivia1.html
@@ -54,7 +54,7 @@
     <!-- BACKGROUND -->
     <style>
         body {
-    background-image: url();
+    background-image: url(https://www.thenational.ae/image/policy:1.809937:1546777972/5bdb703ef556fc595e2b9634.png?f=16x9&w=1200&$p$f$w=0ebaa27);
     background-repeat: no-repeat;
     background-size: cover;
     }
