--- a/third trivia10.html
+++ b/third trivia10.html
@@ -74,7 +74,7 @@ alt="">
 </script>
 <div class="v">
 <a href="third trivia1 wrong.html"><button>Yoshi's Island</button></a>
-<a href="third trivia11.html"><button>Super Mario land</button></a>
+<a href="third trivia11.html"><button>Mario's land</button></a>
 <a href="third trivia1 wrong.html"><button>Mario is missing</button></a>
 <a href="third trivia1 wrong.html"><button>Mario's island</button></a>
 </div>
