--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ background-size: cover;
 <a href="Trivia1.html"><img src="http://images6.fanpop.com/image/photos/40800000/2022c4af-regular-show-4-unknown_kings-40831918-720-540.jpg" width="202" height="206" title="Regular show Trivia" alt="Trivia"></a>
 <a href="second trivia1.html"><img src="https://media.graytvinc.com/images/810*455/Star+Wars49.jpg" width="202" height="206" title="Star wars Trivia" alt="Trivia"></a>
 <a href="triviafunko.html"><img src="https://i.kym-cdn.com/entries/icons/original/000/024/030/thumb.png" width="202" height="206" title="Funko pop" alt="Trivia"></a>
-<a href=""><img src="=" width="202" height="206" title="?" alt="Trivia"></a>
+<a href="triviafunko.html"><img src="" width="202" height="206" title="Nintendo" alt="Trivia"></a>
+<a href="third trivia1.html"><img src="https://www.freepnglogos.com/uploads/nintendo-logo-png/red-nintendo-logo-transparent-vector-3.png" width="202" height="206" title="Nintendo" alt="Trivia"></a>
 </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
