--- a/4triviafunko.html
+++ b/4triviafunko.html
@@ -12,7 +12,7 @@
     <body>
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">When did funko Hq open its doors to the public?</h1>
+    <h1 id ='trivia'align="center">When did funko HQ open its doors to the public?</h1>
     <!-- BACKGROUND -->
 <style>
   body {
