--- a/memory2.html
+++ b/memory2.html
@@ -1,9 +1,24 @@
 <!-- Have an input box for player to input answer. 
 Listed correctly, then "winner". if not then, "try again" -->
-<input type =>
 
-<button id='y'>user's input</button>
-<!-- button to next page -->
-<div>
-    <a href="memory3.html"><button class="button1">Click to continue</button></a>
-</div>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+        <button id='y'>Check answer</button>
+        <input id='text' />
+        <!-- <div>
+            <a href="memory3.html"><button class="button1">Click to continue</button></a>
+        </div> -->
+        
+        <script src="main.js"></script>
+</body>
+</html>
